# projecteuler-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  pe_0001.rs  pe_0002.rs  pe_0003.rs
