[package]
name = "projecteuler_rs"
description = "Project Euler solutions implemented in Rust"
repository = "https://github.com/SiyahaS/projecteuler_rs"
version = "0.1.0"
authors = ["Yakup TÜRKAN"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://yakupturkan.com.tr/showcase/projecteuler-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = { version = "0.2", optional = true }

[features]
pe_0001 = []
pe_0002 = []
pe_0003 = ["primal"]